# GraphAligner

./: .gitmodules  CMakeLists.txt  external.cmake  makefile
cmake/modules/: CheckGitRevision.cmake  FindBBHash.cmake  FindMummer.cmake  Findjemalloc.cmake
src/: Aligner.cpp  Aligner.h  AlignerMain.cpp  AlignmentGraph.h  AlignmentSelection.h  ArrayPriorityQueue.h  BigraphToDigraph.cpp  BigraphToDigraph.h  CommonUtils.h  ComponentPriorityQueue.h  DijkstraQueue.h  GraphAlignerVGAlignment.h  GraphAlignerWrapper.h  MummerSeeder.h  NodeSlice.h  ThreadReadAssertion.cpp  ThreadReadAssertion.h
